<resources>
    <string name="app_name">Otter Airlines</string>
    <string name="mainTitleText">Otter Airlines!</string>
    <string name="mainImageDescription">An otter holding her newborn</string>
    <string name="mainRegisterButton">Register</string>
    <string name="mainLoginButton">Login</string>
    <string name="mainLogoutButton">Logout</string>
    <string name="mainReserveButton">Reserve Seat</string>
    <string name="mainCancelButton">Cancel Reservation</string>
    <string name="mainManageButton">Manage System</string>
    <string name="mainToastSuccessfulLogout">You\'ve successfully logged out!</string>
    <string name="mainCannotManageSystem">Only the admin can manage the system.</string>
    <string name="mainAdminCannotReserveCancel">This is for customers only!</string>

    <string name="title_activity_create_account">Sign in</string>
    <string name="createTitleText">Create Account</string>
    <string name="createUsernameHint">Enter a username</string>
    <string name="createInstructExplanation">Please enter a username and password. Both the username
    and password should have at least 1 number and three alphabetical letters.</string>
    <string name="createPasswordHint">Enter a password</string>
    <string name="createSubmitButton">Submit</string>
    <string name="createMainDisplay"></string>
    <string name="createAlertDuplicateLogin">There is already an account with this username!</string>
    <string name="createAlertIncorrectLogin">Both the username and password must each contain at least 3 letters and 1 digit!</string>
    <string name="createAlertButtonText">OK</string>
    <string name="createAlertSuccessfulAccount">You have created a new account! Please login from the main menu</string>
    <string name="emptyString"></string>

    <string name="loginMainTitleText">Login</string>
    <string name="loginUsernameHint">Enter a username</string>
    <string name="loginPasswordHint">Enter a password</string>
    <string name="loginLoginButton">Login</string>
    <string name="loginSuccessfulLogin">You\'ve successfully logged in!</string>
    <string name="loginAlertIncorrectLogin">Incorrect username and/or password.</string>

    <string name="logMainTitleText">Logs</string>
    <string name="logCreateTitleText">Create Account</string>
    <string name="logReserveTitleText">Reserve Seats</string>
    <string name="logCancelTitleText">Cancel Reservation</string>
    <string name="logContinueButton">Continue</string>
    <string name="logEmptyLogMessage">There are no transactions at this moment</string>

    <string name="flightTitleText">Add New Flight</string>
    <string name="flightNumberText">Flight Number</string>
    <string name="flightDepartText">Departure</string>
    <string name="flightArrivalText">Arrival</string>
    <string name="flightDepartTimeText">Departure Time</string>
    <string name="flightDepartTimeHint">Time</string>
    <string name="flightAMText">AM</string>
    <string name="flightPMText">PM</string>
    <string name="flightCapacityText">Capacity</string>
    <string name="flightPriceText">Price (in $)</string>
    <string name="flightButton">Submit</string>
    <string name="flightAlertQuestionText">Would you like to add a new flight?</string>
    <string name="flightToastExitMessage">Returning to the main menu...</string>
    <string name="flightAlertYesButtonText">Yes</string>
    <string name="flightAlertNoButtonText">No</string>
    <string name="flightToastCreateNewFlight">You\'ve added a new flight!</string>
    <string name="flightAlertFieldsNotFilled">You have not filled in all the required fields!</string>
    <string name="flightAlertDuplicateID">There is already a flight with this number!</string>
    <string name="flightAlertButtonText">OK</string>


    <string name="TYPE_NEW_ACCOUNT">Transaction Type: New Account"</string>
    <string name="TYPE_RESERVE_SEAT">Transaction Type: Reserve Seat"</string>
    <string name="TYPE_CANCEL_RESERVATION">Transaction Type: Cancel Reservation"</string>

    <string name="flightCriteriaTitleText">Flight Criteria</string>
    <string name="flightCriteriaDepartureHint">Enter the departure city</string>
    <string name="flightCriteriaArrivalHint">Enter the destination city</string>
    <string name="flightCriteriaTicketHint">Ticket number</string>
    <string name="flightCriteriaButtonText">Search</string>


    <string name="reserveTitleText">Reserve Seats</string>
    <string name="reserveInstruction">Enter the flight number</string>
    <string name="reserveButtonText">Reserve</string>

    <string name="cancelTitleText">Cancel Reservation</string>
    <string name="cancelInstruction">Enter the flight number</string>
    <string name="cancelFlightButtonText">Cancel</string>

</resources>
